[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-aime"
version = "0.6.0"
description = "Nodetool AIME nodes"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
repository = "https://github.com/nodetool-ai/nodetool-aime"

[tool.poetry.dependencies]
python = "^3.11"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
