[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-aime"
version = "0.6.0"
description = "Nodetool AIME nodes"
readme = "README.md"
authors = [
    {name = "Matthias Georgi", email = "matti.georgi@gmail.com"}
]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core>=0.6.0,<0.7.0",
]


[project.optional-dependencies]
# For development with local nodetool-core
dev = [
    "nodetool-core @ file:///../nodetool-core",
]
# For exact version pinning in production
stable = [
    "nodetool-core==0.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
