[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-aime"
version = "0.6.2-rc9"
description = "Nodetool AIME nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["nodetool-core==0.6.2-rc9"]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.2-rc9"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
